--- a/style.css
+++ b/style.css
@@ -67,16 +67,30 @@ b{
 .wrapper{
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 80px);
     justify-content: center;
     align-items: center;
     padding: 0 10%;
     overflow: hidden;
 }
+/* .cols0 ::after{
+    position: absolute;
+    content: '';
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    left: 20%;
+    top: 30%;
+    background: linear-gradient(60deg, #7f00ff,pink);
+} */
 
 .cols{
     width: 50%;
 }
+.cols0{
+    z-index: 5;
+}
+
 .topline{
     display: block;
     position: relative;
@@ -111,7 +125,7 @@ p{
 .btns{
     position: relative;
     width: 100%;
-    left: 150px;
+   
 }
 button{
     outline: none;
@@ -147,11 +161,24 @@ button:hover{
 }
 @keyframes animationUser {
     50%{
-        right: 30px;
-        top: -80px;
+        right: 5px;
+        top: -70px;
     }
 }
 .imgbox #splash{
     position: absolute;
     top: 50%;
+    left: 70%;
+    transform: translate(-50%, -50%) rotate(-10deg);
+    width: 140%;
+    filter: saturate(200%);
+    animation: animate 6s linear infinite;
+}
+
+@keyframes animate {
+    50%{
+        top: 49%;
+        left: 51%;
+        width: 100%;
+    }
 }
